<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.testaudioenglish.viewmodel.SignUpViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9FFFFFF"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/englishlogo"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_title"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/loginSubTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_2"
                android:textColor="#B5B0B0"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textfiedUsername"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusBottomEnd="13dp"
                app:startIconDrawable="@drawable/baseline_person_24"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@={viewModel.username}"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ground"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusBottomEnd="13dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@android:drawable/ic_lock_lock"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:drawableTint="#222121"
                    android:hint="@string/hint_password"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ground1"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusBottomEnd="13dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@android:drawable/ic_lock_lock"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordAgian"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="textPassword"
                    android:drawableTint="#222121"
                    android:text="@={viewModel.passwordAgain}"
                    android:hint="@string/hint_password_again"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textfiedPassword"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusBottomEnd="13dp"
                app:startIconDrawable="@drawable/baseline_person_24"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@={viewModel.email}"
                    android:hint="@string/nh_p_gmail" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textfiedName"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusBottomEnd="13dp"
                app:startIconDrawable="@drawable/baseline_account_circle_24"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@={viewModel.name}"
                    android:hint="@string/hint_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textfiedAge"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusBottomEnd="13dp"
                app:startIconDrawable="@drawable/baseline_access_time_24"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="number"
                    android:text="@={viewModel.age}"
                    android:hint="@string/hint_age" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textfiedNumberPhone"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusBottomEnd="13dp"
                app:startIconDrawable="@drawable/baseline_app_shortcut_24"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberPhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="number"
                    android:text="@={viewModel.numberPhone}"
                    android:hint="@string/hint_phone" />
            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroundbutton"
                android:text="@string/hint_signup"
                android:onClick="@{() -> viewModel.signUp()}"
                android:textColor="#FF0606"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:id="@+id/registerLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_end_account" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_have_account"
                    android:textColor="#29B6F6"
                    android:onClick="@{() -> viewModel.login()}"
                    android:layout_marginStart="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>