<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.testaudioenglish.viewmodel.HomeFragmentViewModel" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FBFBFB"
        android:orientation="vertical"
        tools:context=".View.FragmentHome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/us"
                android:layout_marginStart="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#EF5350"
                android:text="@string/welcome_message"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/images"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_to_learn_today"
            android:textSize="23sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="80dp"
                android:src="@drawable/point"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="right"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp">

                <TextView
                    android:id="@+id/today_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/study_hours_today"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/first_time"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_time"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/second_time"
                        android:layout_marginStart="7dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/second_time"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

                <SeekBar
                    android:layout_marginTop="15dp"
                    android:id="@+id/seekBar_luminosite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="15dp"
                    android:minWidth="15dp"
                    android:background="@color/white"
                    android:maxHeight="15dp"
                    android:maxWidth="15dp"
                    android:progress="@integer/material_motion_duration_long_2"
                    android:progressDrawable="@drawable/seekbar_style"
                    android:thumb="@drawable/custom_thumb" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:text="@string/ongoing_tests"
                android:textColor="#5C5B5B"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/toeic_types"
                android:layout_height="match_parent"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
